# kclient3

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  config.h.cmake
autotests/: CMakeLists.txt  autotests.h  cookiestest.cpp  locationbartest.cpp  passwordbackendtest.cpp  qztoolstest.cpp  tabmodeltest.cpp  webtabtest.cpp  webviewtest.cpp
linux/appdata/: org.kde.kclient.appdata.xml
linux/appimage/: Dockerfile  build-appimage.sh  build.sh
linux/applications/: org.kde.kclient.desktop
linux/completion/: README.md  _kclient  kclient
mac/: create_dmg.scpt  create_dmg.sh  macdeploy.sh
src/: Messages.sh
src/lib/: CMakeLists.txt
src/lib/adblock/: adblockaddsubscriptiondialog.cpp  adblockaddsubscriptiondialog.h  adblockaddsubscriptiondialog.ui  adblockdialog.cpp  adblockdialog.h  adblockdialog.ui  adblockicon.cpp  adblockicon.h  adblockmanager.cpp  adblockmanager.h  adblockmatcher.h  adblockplugin.h  adblockrule.h  adblocksearchtree.h  adblocksubscription.cpp  adblocksubscription.h  adblocktreewidget.cpp  adblocktreewidget.h  adblockurlinterceptor.cpp  adblockurlinterceptor.h  metadata.desktop
src/lib/app/: autosaver.h  browserwindow.cpp  browserwindow.h  commandlineoptions.cpp  commandlineoptions.h  datapaths.cpp  datapaths.h  mainapplication.cpp  mainapplication.h  mainmenu.cpp  mainmenu.h  profilemanager.cpp  proxystyle.h  qzcommon.cpp  qzcommon.h  settings.h
src/lib/autofill/: autofill.cpp  autofill.h  autofillicon.cpp  autofillicon.h  autofillnotification.cpp  autofillnotification.h  autofillnotification.ui  autofillwidget.h  autofillwidget.ui  passwordmanager.h
src/lib/bookmarks/: bookmarkitem.h  bookmarks.cpp  bookmarks.h  bookmarksicon.cpp  bookmarksicon.h  bookmarksitemdelegate.h  bookmarksmanager.cpp  bookmarksmanager.h  bookmarksmanager.ui  bookmarksmenu.cpp  bookmarksmenu.h  bookmarksmodel.cpp  bookmarksmodel.h  bookmarkstoolbar.cpp  bookmarkstoolbar.h  bookmarkstoolbarbutton.cpp  bookmarkstoolbarbutton.h  bookmarkstools.cpp  bookmarkstools.h  bookmarkstreeview.cpp  bookmarkstreeview.h  bookmarkswidget.cpp  bookmarkswidget.h  bookmarkswidget.ui
src/lib/cookies/: cookiejar.h  cookiemanager.cpp  cookiemanager.h  cookiemanager.ui
src/lib/data/: icons.qrc
src/lib/downloads/: downloaditem.cpp  downloaditem.h  downloaditem.ui  downloadmanager.cpp  downloadmanager.h  downloadmanager.ui  downloadoptionsdialog.cpp  downloadoptionsdialog.h  downloadoptionsdialog.ui  downloadsbutton.cpp
src/lib/history/: history.cpp  history.h  historyitem.h  historymanager.cpp  historymanager.h  historymanager.ui  historymenu.cpp  historymenu.h  historymodel.cpp  historymodel.h
src/lib/navigation/: downicon.h  goicon.h  locationbar.cpp  locationbar.h  locationbarpopup.h  navigationbar.cpp  navigationbar.h  navigationbarconfigdialog.h  navigationbarconfigdialog.ui  navigationbartoolbutton.h  navigationcontainer.h  reloadstopbutton.cpp  reloadstopbutton.h  siteicon.cpp  siteicon.h  websearchbar.cpp  websearchbar.h
src/lib/network/: networkmanager.cpp  networkmanager.h  networkurlinterceptor.cpp  networkurlinterceptor.h  sslerrordialog.h
src/lib/notifications/: desktopnotification.h  desktopnotificationsfactory.cpp  desktopnotificationsfactory.h
src/lib/opensearch/: editsearchengine.h  editsearchengine.ui  opensearchengine.cpp  opensearchengine.h  opensearchreader.cpp  opensearchreader.h  searchenginesdialog.cpp  searchenginesdialog.h  searchenginesdialog.ui  searchenginesmanager.cpp  searchenginesmanager.h
src/lib/other/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  browsinglibrary.cpp  browsinglibrary.h  browsinglibrary.ui  checkboxdialog.h  clearprivatedata.cpp  clearprivatedata.h  clearprivatedata.ui  iconchooser.cpp  iconchooser.h  iconchooser.ui  licenseviewer.cpp  licenseviewer.h  protocolhandlerdialog.ui  protocolhandlermanager.h  qzsettings.cpp  qzsettings.h  registerqappassociation.cpp  registerqappassociation.h  siteinfo.cpp  siteinfo.h  siteinfo.ui  siteinfowidget.cpp  siteinfowidget.h  siteinfowidget.ui  statusbar.cpp  statusbar.h  updater.cpp  updater.h  useragentmanager.cpp  useragentmanager.h
src/lib/plugins/: plugininterface.h  pluginproxy.h  plugins.cpp  plugins.h  speeddial.cpp  speeddial.h
src/lib/popupwindow/: popuplocationbar.cpp  popuplocationbar.h  popupstatusbarmessage.h  popupwebview.cpp  popupwebview.h  popupwindow.cpp  popupwindow.h
src/lib/preferences/: acceptlanguage.cpp  acceptlanguage.h  acceptlanguage.ui  addacceptlanguage.ui  autofillmanager.cpp  autofillmanager.h  autofillmanager.ui  jsoptions.cpp  jsoptions.h  jsoptions.ui  pluginlistdelegate.cpp  pluginlistdelegate.h  pluginslist.ui  pluginsmanager.cpp  pluginsmanager.h  preferences.cpp  preferences.h  preferences.ui  thememanager.cpp  thememanager.h  thememanager.ui  useragentdialog.cpp  useragentdialog.h  useragentdialog.ui
src/lib/session/: restoremanager.h  sessionmanager.cpp  sessionmanager.h  (+2 more)
src/main/: CMakeLists.txt  Info.plist  kclientversion.h.cmake  main.cpp  version.rc
src/plugins/: CMakeLists.txt
src/plugins/KDEFrameworksIntegration/: CMakeLists.txt  Messages.sh  kdeframeworksintegrationplugin.cpp  kdeframeworksintegrationplugin.h  kioschemehandler.cpp  kioschemehandler.h  kwalletpasswordbackend.cpp  kwalletpasswordbackend.h  metadata.desktop
src/plugins/PyFalkon/autotests/: CMakeLists.txt  basictest.py  pykclienttestrunner.cpp
src/scripts/: CMakeLists.txt  i18n.py
tests/benchmarks/: CMakeLists.txt
themes/chrome/: metadata.desktop
themes/linux/: metadata.desktop
themes/mac/: metadata.desktop
themes/windows/: metadata.desktop
windows/: KClient.iss
(+296 files in other folders)
